--- a/src/app/components/tasks/tasks.component.scss
+++ b/src/app/components/tasks/tasks.component.scss
@@ -1,25 +1,3 @@
-.content-table {
-  overflow-x: auto;
-  table {
-    tr {
-      border-bottom: 1px solid #ddd;
-      &:hover {
-        background-color: #d6eeee;
-      }
-    }
-  }
+.wrap {
+  padding-top: 2rem;
 }
-
-// @media screen and (max-width: 750px) {
-//   tbody,
-//   thead {
-//     float: left;
-//   }
-//   thead {
-//     min-width: 120px;
-//   }
-//   td,
-//   th {
-//     display: block;
-//   }
-// }
