--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+form {
+  .aster-required {
+    color: brown;
+  }
+  .invalid-field {
+    color: brown;
+    font-size: small;
+  }
+}
+button.fr {
+  float: right;
+}
