--- a/src/app/components/tasks/new-task/new-task.component.html
+++ b/src/app/components/tasks/new-task/new-task.component.html
@@ -2,63 +2,154 @@
   <div class="card-body">
     <h5 class="card-title">Crear Nueva Tarea</h5>
     <form role="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="title">
-          Nombre de la tarea <span class="aster-required">*</span>
-        </label>
-        <input
-          type="text"
-          class="form-control"
-          id="title"
-          placeholder="Nombre de la tarea"
-          formControlName="title"
-        />
-        <div
-          *ngIf="
-            (submitted && f['title'].errors && f['title'].errors['required']) ||
-            (f['title'].touched &&
-              f['title'].errors &&
-              f['title'].errors['required'])
-          "
-          class="invalid-field"
-        >
-          Nombre requerido
+      <div class="row">
+        <div class="form-group">
+          <label for="title">
+            Nombre de la tarea <span class="aster-required">*</span>
+          </label>
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            placeholder="Nombre de la tarea"
+            formControlName="title"
+            [ngClass]="{ 'is-invalid': (submitted && f['title'].errors) || !submitted && f['title'].touched && f['title'].errors }"
+          />
+          <div
+            *ngIf="
+              (submitted &&
+                f['title'].errors &&
+                f['title'].errors['required']) ||
+              (f['title'].touched && f['title'].errors)
+            "
+            class="invalid-field"
+          >
+            <div *ngIf="f['title'].errors['required']">Nombre requerido</div>
+          </div>
         </div>
       </div>
 
-      <br />
-      <div class="form-group">
-        <label for="date">
-          Fecha límite <span class="aster-required">*</span>
-        </label>
-        <input
-          type="date"
-          class="form-control"
-          id="date"
-          placeholder="date"
-          formControlName="date"        />
-        <div
-          *ngIf="
-            (submitted && f['date'].errors && f['date'].errors['required']) ||
-            (f['date'].touched &&
-              f['date'].errors &&
-              f['date'].errors['required'])
-          "
-          class="invalid-field"
-        >
-          Fecha límite requerida
+      <div class="row">
+        <div class="form-group">
+          <label for="date">
+            Fecha límite <span class="aster-required">*</span>
+          </label>
+          <input
+            type="date"
+            class="form-control"
+            id="date"
+            placeholder="date"
+            formControlName="date"
+            [ngClass]="{ 'is-invalid': (submitted && f['date'].errors) || !submitted && f['date'].touched && f['date'].errors }"
+          />
+          <div
+            *ngIf="
+              (submitted && f['date'].errors && f['date'].errors['required']) ||
+              (f['date'].touched && f['date'].errors)
+            "
+            class="invalid-field"
+          >
+            <div *ngIf="f['date'].errors['required']">
+              Fecha límite requerida
+            </div>
+          </div>
         </div>
       </div>
-      <br />
+
+      <div class="row">
+        <strong>Personas asociadas:</strong>
+
+        <div formArrayName="people">
+          <div
+            *ngFor="let person of people.controls; let i = index"
+            [formGroupName]="i"
+          >
+            <div class="row">
+              <div class="form-group">
+                <label>Nombre completo</label><br />
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="fullName"
+                  [ngClass]="{ 'is-invalid': (submitted && person.get('fullName')?.errors) || !submitted && person.get('fullName')?.touched && person.get('fullName')?.errors }"
+                />
+                <div
+                  *ngIf="
+                    (submitted && person.get('fullName')?.errors) ||
+                    (person.get('fullName')?.touched &&
+                      person.get('fullName')?.errors)
+                  "
+                  class="invalid-field"
+                >
+                  <div *ngIf="person.get('fullName')?.errors?.['required']">
+                    Nombre de la persona requerido
+                  </div>
+                  <div *ngIf="person.get('fullName')?.errors?.['minlength']">
+                    Nombre de la persona debe tener mínimo 5 caracteres
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-group">
+                <label>Edad</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  formControlName="age"
+                  [ngClass]="{ 'is-invalid': (submitted && person.get('age')?.errors) || !submitted && person.get('age')?.touched && person.get('age')?.errors }"
+                />
+
+                <div
+                *ngIf="
+                  (submitted && person.get('age')?.errors) ||
+                  (person.get('age')?.touched &&
+                    person.get('age')?.errors)
+                "
+                class="invalid-field"
+              >
+                <div *ngIf="person.get('age')?.errors?.['required']">
+                 Edad requerida
+                </div>
+                <div *ngIf="person.get('age')?.errors?.['min']">
+                  La edad mínima es de 18 años
+                </div>
+              </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <button
+                  class="btn btn-primary form-control"
+                  (click)="addPerson()"
+                >
+                  Añadir Persona
+                </button>
+              </div>
+              <div class="col">
+                <button
+                  *ngIf="i > 0"
+                  class="btn btn-danger form-control"
+                  (click)="deletePerson(i)"
+                >
+                  Eliminar Persona
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col">
           <button class="btn btn-secondary form-control" routerLink="">
-            Back
+            Listado de tareas
           </button>
         </div>
         <div class="col">
           <button type="submit" class="btn btn-primary form-control">
-            Add
+            Añadir tarea
           </button>
         </div>
       </div>
