--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,26 +1,69 @@
 <div class="wrap">
   <div class="container">
-    <button class="btn btn-primary fr" routerLink="/new-task">Add Task</button>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Title</th>
-          <th scope="col">State</th>
-          <th scope="col">Options</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let task of tasksService.tasks(); let i = index">
-          <td>{{ task.id }}</td>
-          <td>{{ task.title }}</td>
-          <td>{{ task.completed }}</td>
-          <td>
-            <span (click)="see(task.id)" class="information">SEE</span>
-            <span class="delete">DELETE</span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="row">
+      <div class="col">
+        <select
+          class="form-select fr"
+          [(ngModel)]="stateSelected"
+          (change)="changeStateFilter()"
+        >
+          <option *ngFor="let state of states" value="{{ state.value }}">
+            {{ state.display }}
+          </option>
+        </select>
+      </div>
+      <div class="col">
+        <button class="btn btn-primary fr" routerLink="/new-task">
+          Añadir Tarea
+        </button>
+      </div>
+    </div>
+
+    <br />
+    <div class="row">
+      <div class="col">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Título</th>
+              <th scope="col">Estado</th>
+              <th scope="col">Opciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr
+              *ngFor="let task of tasks; let i = index"
+              [ngClass]="
+                task.completed === true ? 'table-success' : 'table-warning'
+              "
+            >
+              <td>
+                {{ task.id }}
+              </td>
+              <td>{{ task.title }}</td>
+              <td>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    id="completed"
+                    [checked]="task.completed === true"
+                    (click)="changeStateOfTask(task.id)"
+                  />
+                  <label class="form-check-label" for="completed">{{
+                    task.completed | stateTask
+                  }}</label>
+                </div>
+              </td>
+              <td>
+                <button class="btn btn-info" (click)="see(task.id)">SEE</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
