--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -58,7 +58,7 @@
                 </div>
               </td>
               <td>
-                <button class="btn btn-info" (click)="see(task.id)">SEE</button>
+                <button class="btn btn-info" (click)="see(task.id)">Detalles</button>
               </td>
             </tr>
           </tbody>
