--- a/src/app/components/tasks/new-task/new-task.component.scss
+++ b/src/app/components/tasks/new-task/new-task.component.scss
@@ -4,6 +4,28 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+div.line {
+  width: 98%;
+  height: 2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: black;
+}
+div.line2 {
+  width: 98%;
+  height: 2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: blue;
+}
+
+div.skills {
+  width: 95%;
+}
+div.versions {
+  width: 90%;
+}
+
 @media only screen and (max-width: 768px) {
   .card {
     width: 95%;
